# hackmenot

./: .dockerignore  .gitignore  .hackmenot.yml  .pre-commit-hooks.yaml  Dockerfile  README.md  action.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: example-security-scan.yml  hackmenot.yml  publish-docker.yml  publish-pypi.yml
ci-templates/: Jenkinsfile  azure-pipelines.yml  circleci-config.yml  github-action-example.yml  gitlab-ci.yml  pre-commit-config-example.yaml
docs/: ci-integration.md  cli-reference.md  configuration.md  contributing.md  custom-rules.md  getting-started.md  rules-reference.md
docs/plans/: 2026-01-30-ai-code-scanner-design.md  2026-01-30-phase-1-implementation.md  2026-01-31-phase-2-design.md  2026-01-31-phase-2-implementation.md  2026-01-31-phase-3-design.md  2026-01-31-phase-3-implementation.md  2026-01-31-phase-4-design.md  2026-01-31-phase-4-implementation.md  2026-01-31-phase-5-design.md  2026-01-31-phase-5-implementation.md  2026-01-31-phase-6-design.md  2026-01-31-phase-6-implementation.md  2026-01-31-phase-7-design.md  2026-01-31-phase-8-design.md  2026-01-31-phase-8-implementation.md  2026-01-31-readme-redesign.md
scripts/: update-package-lists.py
src/hackmenot/: __init__.py
tests/: __init__.py  conftest.py  test_integration.py
tests/test_cli/: test_ci.py  test_ci_integration.py  test_dry_run.py  test_flags.py  test_git.py  test_include_deps.py  test_interactive.py  test_main.py  test_scan.py  test_staged.py
tests/test_core/: test_cache.py  test_config.py  test_go_scanning.py  test_ignores.py  test_models.py  (+7 more)
(+74 files in other folders)
